--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "swagger-ui-react": "^5.26.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "zod": "^3.25.71"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@types/react-dom": "^18",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^5.18.0",
+    "@types/three": "^0.180.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
