--- a/package.json
+++ b/package.json
@@ -11,48 +11,104 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.3.2",
+    "@react-email/render": "^1.1.3",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.5.0",
+    "@tanstack/react-table": "^8.21.3",
+    "@tiptap/pm": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
+    "@types/jspdf": "^1.3.3",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pdfjs-dist": "^2.10.377",
     "@use-gesture/react": "^10.3.1",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "google-libphonenumber": "^3.2.42",
     "gsap": "^3.13.0",
+    "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
+    "openai": "^5.18.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.149",
+    "pure-react-carousel": "^1.32.0",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18",
+    "react-draggable": "^4.5.0",
     "react-hook-form": "^7.59.0",
+    "react-international-phone": "^4.6.0",
+    "react-konva": "^18.2.12",
+    "react-pdf": "^10.1.0",
+    "react-resizable-panels": "^3.0.4",
+    "react-slider": "^2.0.6",
+    "react-spinners": "^0.17.0",
+    "sonner": "^2.0.6",
+    "stripe": "^18.3.0",
+    "styled-components": "^6.1.19",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui": "^5.26.0",
     "swagger-ui-react": "^5.26.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
     "three": "^0.180.0",
-    "zod": "^3.25.71"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.71",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
+    "@types/google-libphonenumber": "^7.4.30",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slider": "^1.3.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^5.18.0",
     "@types/three": "^0.180.0",
